--- a/noticias.html
+++ b/noticias.html
@@ -16,6 +16,6 @@
     </div>
 
 <body>
-   <iframe src="https://www.20minutos.es/minuteca/actualizaciones/1/" frameborder="0" class="tema"></iframe>
+   <iframe src="https://rpp.pe/noticias/actualizacion" frameborder="0" ></iframe>
 </body>
 </html>
